# handwriting-transformers

./: .gitignore  README.md  pyproject.toml
src/handwriting_transformers/: params.py  train.py
src/handwriting_transformers/data/: dataset.py
src/handwriting_transformers/models/: BigGAN_networks.py  __init__.py  inception.py  model.py  networks.py
src/handwriting_transformers/util/: visualizer.py
src/handwriting_transformers/util/models/: OCR_network.py  model.py  model_.py
