[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "handwriting-transformers"
version = "0.0.1"
description = "Handwriting Transformers"
authors = [
    { name = "Ankan Bhunia", email = "ankan.bhunia@gmail.com" },
]
dependencies = [
    "torch~=2.7.1",
    "torchvision~=0.22.1",
    "scipy~=1.16.0",
    "opencv-python-headless~=4.11.0.86",
    "Pillow~=11.2.1",
    "matplotlib~=3.10.3",
    "tqdm~=4.67.1",
]

[tool.setuptools.packages.find]
where = ["."]
